--- a/pattern.tex
+++ b/pattern.tex
@@ -31,7 +31,7 @@
 \newcommand{\titreDoc}{Titre} % MODIF ICI
 \newcommand{\sousTitreDoc}{Sous titre} % MODIF ICI
 \newcommand{\sousSousTitreDoc}{Precision} % MODIF ICI
-\newcommand{\fichierBib}{patern.bib} % MODIF ICI
+\newcommand{\fichierBib}{pattern.bib} % MODIF ICI
 
 \addbibresource{\fichierBib}
 
