--- a/pattern.tex
+++ b/pattern.tex
@@ -9,7 +9,9 @@
 \usepackage{titling}
 \usepackage[bmargin=2.5cm, tmargin=2.5cm, rmargin=2.5cm, lmargin=2.5cm]{geometry}
 \usepackage{hyperref}
+\usepackage{csquotes}
 \usepackage{biblatex}
+\usepackage{etoolbox}
 
 \hypersetup{
     colorlinks,
@@ -19,19 +21,14 @@
     urlcolor=black
 }
 
-\newcommand{\subtitle}[1]{%
-  \posttitle{%
-    \par\end{center}
-    \begin{center}\large#1\end{center}
-    \vskip0.5em}%
-}
-
 \newcommand{\nomEntier}{Prenom Nom} % MODIF ICI
 \newcommand{\dateRendu}{\today} % MODIF ICI
 \newcommand{\titreDoc}{Titre} % MODIF ICI
 \newcommand{\sousTitreDoc}{Sous titre} % MODIF ICI
 \newcommand{\sousSousTitreDoc}{Precision} % MODIF ICI
 \newcommand{\fichierBib}{pattern.bib} % MODIF ICI
+\newcommand{\formation}{formation} % MODIF ICI
+\usepackage{titlesec}
 
 \addbibresource{\fichierBib}
 
@@ -47,15 +44,18 @@
 \renewcommand{\headrulewidth}{0pt}
 \onehalfspacing
 
+\newlength{\oldparindent}
+\setlength{\oldparindent}{\parindent}
 
 
-% add title
-% no de bas de page -> sommaire
-% page de presentation -> sommaire -> debut
+\setlength{\parskip}{0.5\baselineskip \advance\parskip by 0pt plus 2pt} % Definition of `parskip`
+\setlength{\parindent}{0pt}
 
+\newcommand{\ind}{\hspace*{\oldparindent}}
 
-\begin{document}
+\titleformat{\section}{\normalfont\Large\bfseries}{}{0pt}{}[]
 
+\newcommand{\pageDeTitre}{
 \begin{titlepage}
     \nomEntier \hfill \dateRendu
     \begin{center}
@@ -71,22 +71,30 @@
         \vspace{0.5cm}
         \large
         \sousSousTitreDoc
+        \vfill
+        {\footnotesize Formation \formation}
     \end{center}
  \end{titlepage}
  \thispagestyle{fancy}
 \newpage
+}
+
+\begin{document}
+\pageDeTitre
 
 \tableofcontents
 \newpage
 
+\section{Introduction}
+\lipsum[1-2]
 \section{Lorem}
 \lipsum
 \section{Ipsum}
 \lipsum
+\section{Conclusion}
+\lipsum[1-2]
 
 \cite{WEBSITE:1}{preuve: internet}
-
-
 \cite{BOOK:1}{...mais aussi un livre}
 
 \printbibliography
